# SnapHelix

./: .gitignore  CMakeLists.txt  README.md  coordinateconverter.cpp  coordinateconverter.h  screencapturer.cpp  screencapturer.h  screencapturer_multi.cpp  uiadetector.cpp  uiadetector_impl.cpp
include/: screencapturer.h  uiadetector.h
src/: main.cpp  screencapturer_multi.cpp  uiadetector.cpp
